# rust-analyzer

./: Cargo.toml  clippy.toml
crates/base-db/: Cargo.toml
crates/base-db/src/: input.rs  lib.rs
crates/cfg/: Cargo.toml
crates/cfg/src/: cfg_expr.rs  dnf.rs  lib.rs
crates/hir/: Cargo.toml
crates/hir-def/: Cargo.toml
crates/hir-def/src/: dyn_map.rs  expr_store.rs  find_path.rs  import_map.rs  item_scope.rs  item_tree.rs  lang_item.rs  lib.rs  nameres.rs  resolver.rs
crates/hir-def/src/expr_store/: lower.rs
crates/hir-def/src/item_tree/: lower.rs
crates/hir-def/src/nameres/: collector.rs
crates/hir-expand/: Cargo.toml
crates/hir-expand/src/: cfg_process.rs  db.rs  fixup.rs  inert_attr_macro.rs  lib.rs  prettify_macro_expansion_.rs  proc_macro.rs
crates/hir-expand/src/builtin/: derive_macro.rs
crates/hir-ty/: Cargo.toml
crates/hir-ty/src/: display.rs  dyn_compatibility.rs  infer.rs  inhabitedness.rs  lib.rs  lower.rs  lower_nextsolver.rs  method_resolution.rs  mir.rs  target_feature.rs  test_db.rs  tests.rs  utils.rs
crates/hir-ty/src/diagnostics/: expr.rs
crates/hir-ty/src/dyn_compatibility/: tests.rs
crates/hir-ty/src/infer/: fallback.rs  unify.rs
crates/hir-ty/src/layout/: tests.rs
crates/hir-ty/src/lower_nextsolver/: path.rs
crates/hir-ty/src/mir/: borrowck.rs  eval.rs  lower.rs
crates/hir-ty/src/next_solver/: fulfill.rs  interner.rs
crates/hir/src/: lib.rs  semantics.rs  symbols.rs  term_search.rs
crates/hir/src/semantics/: source_to_def.rs
crates/hir/src/term_search/: tactics.rs
crates/ide/: Cargo.toml
crates/ide-assists/: Cargo.toml
crates/ide-assists/src/handlers/: convert_bool_to_enum.rs  convert_closure_to_fn.rs  convert_tuple_return_type_to_struct.rs  destructure_struct_binding.rs  extract_function.rs  extract_module.rs  extract_struct_from_enum_variant.rs  generate_delegate_methods.rs  generate_delegate_trait.rs  generate_function.rs  inline_type_alias.rs  introduce_named_lifetime.rs  merge_match_arms.rs  remove_unused_imports.rs  reorder_fields.rs  (+1 more)
crates/ide-completion/: Cargo.toml
crates/ide-completion/src/: context.rs  lib.rs
crates/ide-db/: Cargo.toml
crates/ide-db/src/: apply_change.rs  lib.rs  path_transform.rs  prime_caches.rs  search.rs  source_change.rs  symbol_index.rs  traits.rs
crates/ide-diagnostics/: Cargo.toml
crates/ide-diagnostics/src/: lib.rs
crates/ide-ssr/: Cargo.toml
crates/ide-ssr/src/: lib.rs  matching.rs  nester.rs  parsing.rs  replacing.rs  resolving.rs  search.rs  tests.rs
crates/ide/src/: annotations.rs  call_hierarchy.rs  doc_links.rs  fetch_crates.rs  folding_ranges.rs  highlight_related.rs  hover.rs  inlay_hints.rs  lib.rs  runnables.rs  signature_help.rs  ssr.rs  static_index.rs  syntax_highlighting.rs  view_crate_graph.rs
crates/intern/src/: lib.rs  symbol.rs
crates/load-cargo/: Cargo.toml
crates/load-cargo/src/: lib.rs
crates/mbe/: Cargo.toml
crates/mbe/src/: benchmark.rs  expander.rs
crates/proc-macro-api/: Cargo.toml
crates/project-model/: Cargo.toml
crates/project-model/src/: build_dependencies.rs  cargo_config_file.rs  cargo_workspace.rs  lib.rs  project_json.rs  sysroot.rs  tests.rs  workspace.rs
crates/ra-hash/: Cargo.toml
crates/ra-hash/src/: lib.rs
crates/rust-analyzer/: Cargo.toml
crates/rust-analyzer/src/: config.rs  diagnostics.rs  discover.rs  flycheck.rs  global_state.rs  mem_docs.rs  reload.rs  target_spec.rs
crates/span/: Cargo.toml
crates/span/src/: ast_id.rs
crates/stdx/src/: lib.rs  strip_indent.rs
crates/syntax/: Cargo.toml
crates/syntax-bridge/: Cargo.toml
crates/syntax-bridge/src/: lib.rs  tests.rs  to_parser_input.rs
crates/syntax/src/: syntax_editor.rs
crates/test-fixture/: Cargo.toml
crates/test-fixture/src/: lib.rs
crates/test-utils/: Cargo.toml
crates/test-utils/src/: fixture.rs  lib.rs
crates/vfs/: Cargo.toml
crates/vfs-notify/: Cargo.toml
crates/vfs-notify/src/: lib.rs
crates/vfs/src/: file_set.rs  lib.rs  path_interner.rs
(+45 files in other folders)
