[package]
name = "cfg"
version = "0.0.0"
repository.workspace = true
description = "Conditional compiling options, `cfg` attribute parser and evaluator for rust-analyzer."

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
doctest = false

[dependencies]
tracing.workspace = true

# locals deps
intern.workspace = true
ra-hash.workspace = true
tt = { workspace = true, optional = true }

[dev-dependencies]
expect-test = "1.5.1"
oorandom = "11.1.5"
arbitrary = { version = "1.4.1", features = ["derive"] }

# local deps
syntax-bridge.workspace = true
syntax.workspace = true

[lints]
workspace = true
