[package]
name = "ra-hash"
version = "0.0.0"
repository.workspace = true
description = "A set of hash-related definitions for rust-analyzer."

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
doctest = false

[dependencies]
dashmap.workspace = true
indexmap.workspace = true
rustc-hash.workspace = true

# local crates (there should be none)
