[package]
name = "span"
version = "0.0.0"
repository.workspace = true
description = "File and span related types for rust-analyzer."

rust-version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true


[dependencies]
la-arena.workspace = true
salsa = { workspace = true, optional = true }
hashbrown.workspace = true
text-size.workspace = true

# local deps
ra-hash.workspace = true
syntax.workspace = true
stdx.workspace = true
vfs.workspace = true

[dev-dependencies]
syntax.workspace = true

[features]
default = ["salsa"]

[lints]
workspace = true
