[package]
name = "test-fixture"
version = "0.0.0"
rust-version.workspace = true
description = "Test fixtures for rust-analyzer."

edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
triomphe.workspace = true

# local crates
hir-expand.workspace = true
test-utils.workspace = true
tt.workspace = true
cfg.workspace = true
base-db.workspace = true
ra-hash.workspace = true
span.workspace = true
stdx.workspace = true
intern.workspace = true
paths.workspace = true

[lints]
workspace = true
