[package]
name = "vfs"
version = "0.0.0"
repository.workspace = true
description = "A virtual file system for rust-analyzer."

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
doctest = false

[dependencies]
tracing.workspace = true
fst = "0.4.7"
nohash-hasher.workspace = true
crossbeam-channel.workspace = true

# local crates
paths.workspace = true
ra-hash.workspace = true
stdx.workspace = true

[lints]
workspace = true
